# 106-events

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
server/: .env.example  Cargo.toml
server/.sqlx/: query-01cc7678b3ed423938856f62fc3b110d74e751912e18d25f80b86fe0896ef45b.json  query-02bbe2f974d2890f0e38983f9fa4b7638d2b5f27f6fb999f7981283e60c1390e.json  query-03a784d4a7523070b151caa0437e4efe09526bfb414a5660b137e4fb1ca3f255.json  query-046c7e66629c34f1ed10feeca256612e7fcaf8ed91ec78c8959330638dac15d1.json  query-05591241dedf066554358c6f61677b1ba984dfbbf90b646c48584ccb90c809a6.json  query-07e28fbb6b9e377cc8d06d6c1c9c3a07c2e29b2a8ad763dcc6782d0060e4cace.json  query-09f8fdc440355d514eaab0f3457e2e4b0b06a3b84753513c100f7681d8ca2ee6.json  query-0a066ffb54b311419b45fc5cf60ae0c45d7742c8606a3676b331443842909768.json  query-0ad85f46d4003904a128d4a24df3810ad0d1420a8616eed80f1fc216d9e78dfe.json  query-0b34a6e43a15d5d42fb1c9b5941928967c06f312ee1a7ae4ba6fefe236921d2d.json  query-0da6610200fbaae22e77d340249605c3ecf88340a5c59a06d5276ccd8ff74593.json  query-0e444fccbb18aa024d0a5020e58eb84933671885508d4c3b21e449fd8e7c9144.json  query-0f89d27769f3b69480b3c6bc7f087b82983758b742ed93e401a885d55a0641ab.json  query-0fb91eceee5b6e9cac4e08436a7418edd72e7c4b2e3204104201bd1dbfa5aba7.json  query-1032927b2d35bc989916bd7069127bae429a333579c578268501ee5b7aa6de09.json  query-13f0d24e070e8919f187766a1a1eff12f8a1cd3a26367f58fbcd0036889bce76.json  query-1402454c142e5f4aff2ee6f9801a6feecd7cd44797e7d1bb122f9df6c0a26047.json  (+104 more)
server/migrations/: 0001_auth.sql  0002_events.sql  0003_guests.sql  (+7 more)
(+90 files in other folders)
